--- a/variables.less
+++ b/variables.less
@@ -1,2 +1,6 @@
-@main-lightblue: #92b9c4;
-@hover-color: #587c0c;
+//colors
+@mainBlue: #a2c6cf;
+@hoverColor: darken(@mainBlue, 20%);
+
+//fonts
+@mainFont: Georgia, Times, serif;
