--- a/styles.less
+++ b/styles.less
@@ -62,7 +62,9 @@
     margin-top: 5em;
     margin-bottom: -5em;
     h1.name{
-        font-size: 3.25em;
+        font-size: 4.75em;
+        font-family: @nameFont;
+        font-weight: bold;
         margin-bottom: -0.5em;
     }
     h3.title{
@@ -114,11 +116,12 @@
             margin-bottom: 1.5em;
         }
         .form-style{
-            margin-left: 3em;
-            margin-right: 3em;
+            margin-left: 5em;
+            margin-right: 5em;
+            width: 20em;
             background-color: @mainBlue;
             display: block;
-            padding: 2em 4em 2em 6em;
+            padding: 2em 4em 2em 5em;
             .roundedCorners;
             label{
                 color: white;
